--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ section {
 }
 .projects {
   display: flex;
-  flex: wrap;
+  flex-wap: wrap;
   align-items: center;
   justify-content: center;
   gap: 20px;
