--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,16 @@
   text-decoration: none;
   color: inherit;
 }
+@media screen and (max-width: 400px) {
+  .h1{
+    font-size: 1rem;
+  }
+  .border {
+    width: 360px;
+    height: 520px;
+}
 
+}
 html {
   background: #12181b;
   color: white;
@@ -134,6 +143,11 @@ section {
   width: 99%;
 }
 @media screen and (max-width: 700px) {
+  .main-content {
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+  }
   .school{
     height: 400px;
     flex-direction: column;
