--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@
 html {
   background: #12181b;
   color: white;
+  overflow-x: scroll;
 }
 h1 {
   font-size: 2.5em;
@@ -48,6 +49,9 @@ nav {
 }
 section {
   margin-block: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .projects {
   display: flex;
@@ -142,6 +146,17 @@ section {
   height: 300px;
   width: 99%;
 }
+@media screen and (min-width: 1200px) {
+  .school{
+    max-width: 1200px;
+  }
+  .border2{
+    max-width: 1200px;
+  }
+  .school img{
+    max-width: 500px;
+  }
+}
 @media screen and (max-width: 700px) {
   .main-content {
     flex-direction: column;
@@ -172,4 +187,17 @@ section {
   height: 70%;
   overflow-y: scroll;
   margin-inline: auto;
+}
+.skills {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  width: 65%;
+  margin-block: 20px;
+}
+.skills img {
+  height: 100px;
 }
