--- a/styles.css
+++ b/styles.css
@@ -18,13 +18,14 @@
   .border {
     width: 360px;
     height: 520px;
-}
-
+  }
+  .content {
+    width: 100%;
+  }
 }
 html {
   background: #12181b;
   color: white;
-  overflow-x: scroll;
 }
 h1 {
   font-size: 2.5em;
@@ -103,7 +104,7 @@ section {
 .border, .border2{
   display: flex;
   align-items: center;
-  background: linear-gradient(-45deg, #ff35a4, #29fef6);
+  background: linear-gradient(-45deg, #ff35a4, #29fef6, #ff35a4, #29fef6);
   background-size: 400% 400%;
   animation: gradient 5s ease infinite;
   border-radius: 10px;
@@ -195,9 +196,95 @@ section {
   justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
-  width: 65%;
+  width: 80%;
   margin-block: 20px;
 }
 .skills img {
   height: 100px;
+  z-index: 10;
+}
+@media screen and (max-width: 400px) {
+  .skills {
+    width: 100%;
+    gap: 3px;
+  }
+  .skills img{
+    transform: scale(.5); 
+    height: 69px;
+  }
+}
+
+.hexagon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 150px; 
+  height: 86.60px;
+  background-color: #2a2e35;
+  margin: 43.30px 0;
+  transform: rotate(0deg)!important;
+}
+
+.hexagon:before,
+.hexagon:after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  width: 0;
+  border-left: 75px solid transparent;
+  border-right: 75px solid transparent;
+}
+
+
+.hexagon:before {
+  bottom: 100%;
+  border-bottom: 43.30px solid #2a2e35;
+}
+
+.hexagon:after {
+  top: 100%;
+  width: 0;
+  border-top: 43.30px solid #2a2e35;
+}
+.border3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: -6;
+  width: 155px; 
+  height: 89.49px;
+  background: linear-gradient(-45deg, #ff35a4, #29fef6, #ff35a4, #29fef6);
+  animation: gradient 5s ease infinite;
+  margin: 44.74px 0;
+}
+
+
+.border3 {
+  position: relative;
+  background: linear-gradient(-45deg, #ff35a4, #29fef6, #ff35a4, #29fef6);
+  animation: gradient 5s ease infinite;
+    background-size: 400% 400%;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  transition: 0.5s;
+  z-index: -8;
+}
+
+.border3:before,
+.border3:after {
+  position: absolute;
+  content: "";
+  background: inherit;
+  height: 100%;
+  width: 100%;
+  z-index: -8;
+}
+.border3:before {
+  transform: rotateZ(60deg);
+}
+.border3:after {
+  transform: rotateZ(-60deg);
 }
