--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,24 @@ section {
   flex-direction: column;
   align-items: center;
 }
+.border1 {
+  width: 288px;
+  height: 68px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100px !important;
+  margin-top: 50px;
+}
+a.dlbutton {
+  background-color: #2a2e35;
+  color: white;
+  border-radius: 50px;
+  text-decoration: none;
+  font-size: 1.2em;
+  padding: 20px;
+}
 .projects {
   display: flex;
   flex-wrap: wrap;
@@ -87,7 +105,6 @@ section {
   width: 400px;
   height: 500px;
   background-color: #2a2e35;
-  margin-inline: 10px;
   border-radius: 10px;
   align-items: center;
 }
@@ -124,6 +141,7 @@ section {
 }
 
 .border,
+.border1,
 .border2 {
   display: flex;
   align-items: center;
@@ -136,7 +154,7 @@ section {
 
 .border {
   width: 402px;
-  height: 520px;
+  height: 504px;
 }
 
 .border2 {
